beta_convergence_project_sergio.ipynb

--- a/beta_convergence_project_sergio.ipynb
+++ b/beta_convergence_project_sergio.ipynb
@@ -404,7 +404,7 @@
     "results = df_wdi[\n",
     "    ['Country Code', 'Pre_Crisis_Growth (2004-2008)', 'Recuperation_Growth (2009-2013)', 'Stability_Growth (2014-2018)', 'Recent_Growth (2019-2024)']\n",
     "    ]\n",
-    "# See results limited to first 10 rows and rounded to 2 decimals\n",
+    "# See results rounded to 2 decimals\n",
     "results.round(2)"
    ]
   },
