beta_convergence_project_sergio.ipynb

--- a/beta_convergence_project_sergio.ipynb
+++ b/beta_convergence_project_sergio.ipynb
@@ -433,7 +433,7 @@
     "    lambda x: 'Emerging' if x in emerging else 'Developed'\n",
     "    )\n",
     "\n",
-    "# Definir qué columnas usar para X e Y\n",
+    "# Define columns for X and Y\n",
     "x_col = 'Pre_Crisis_Growth (2004-2008)'  # Exogenous variable\n",
     "y_col = 'Recent_Growth (2019-2024)'      # Endogenous variable\n",
     "\n",
@@ -519,7 +519,7 @@
     }
    ],
    "source": [
-    "# Definir qué columnas usar para X e Y\n",
+    "# Define columns for X and Y\n",
     "x_col = 'Stability_Growth (2014-2018)'\n",
     "y_col = 'Recent_Growth (2019-2024)'\n",
     "\n",
