--- a/beta_convergence_project.ipynb
+++ b/beta_convergence_project.ipynb
@@ -2,23 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "b13f16e4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import packages\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import r2_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "f6f15d57",
    "metadata": {},
    "outputs": [
     {
@@ -859,12 +844,19 @@
        "[30 rows x 22 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Import packages\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import r2_score\n",
+    "\n",
     "# Define, clean and partitionate the data\n",
     "df_wdi = pd.read_csv(r\"C:\\Users\\Usuario\\Downloads\\gdp_perc_growth_2004_2024.csv\", sep=\";\", decimal=',')\n",
     "df_wdi = df_wdi.dropna()\n",
